Desafio/force-app/main/default/objects/Case/fields/DataLimiteResolucao__c.field-meta.xml
<CustomField>
    <fullName>DataLimiteResolucao__c</fullName>
    <label>Data Limite Para Resolução</label>
    <type>DateTime</type>
</CustomField>