Desafio/force-app/main/default/objects/Case/fields/MotivoDoCaso__c.field-meta.xml
<CustomField>
    <fullName>MotivoDoCaso__c</fullName>
    <label>Motivo do Caso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Urgencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitação de Acesso</fullName>
            </value>
            <value>
                <fullName>Problema de Rede</fullName>
            </value>
            <value>
                <fullName>Erro no Sistema</fullName>
            </value>
            <value>
                <fullName>Lentidão</fullName>
            </value>
            <value>
                <fullName>Falha Crítica</fullName>
            </value>
            <value>
                <fullName>Sistema Indisponível</fullName>
            </value>
            <value>
                <fullName>Dúvida sobre Benefícios</fullName>
            </value>
            <value>
                <fullName>Solicitação de Documento</fullName>
            </value>
            <value>
                <fullName>Problema com Pagamento</fullName>
            </value>
            <value>
                <fullName>Alteração de Cadastro</fullName>
            </value>
            <value>
                <fullName>Fraude Suspeita</fullName>
            </value>
            <value>
                <fullName>Problema Jurídico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>