Desafio/force-app/main/default/objects/Case/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <formula>IF(
  NOT(ISBLANK( Owner:User.Id )),
  /* Dono é um Usuário */
  Owner:User.FirstName,
  /* Dono é uma Fila (Queue) */
  &quot;equipe &quot; &amp; Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>