Desafio/force-app/main/default/objects/Case/fields/SubmittedForApproval__c.field-meta.xml
<CustomField>
    <fullName>SubmittedForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SubmittedForApproval</label>
    <type>Checkbox</type>
</CustomField>