Desafio/force-app/main/default/objects/Case/recordTypes/SuporteAdministrativo.recordType-meta.xml
<RecordType>
    <fullName>SuporteAdministrativo</fullName>
    <active>true</active>
    <businessProcess>Desafio</businessProcess>
    <description>Para casos administrativos e de processos</description>
    <label>Suporte Administrativo</label>
</RecordType>