Desafio/force-app/main/default/objects/Case/recordTypes/SuporteTecnico.recordType-meta.xml
<RecordType>
    <fullName>SuporteTecnico</fullName>
    <active>true</active>
    <businessProcess>Desafio</businessProcess>
    <description>Para casos de suporte técnico e sistemas</description>
    <label>Suporte Técnico</label>
</RecordType>